--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "axios": "^0.17.1",
     "cropperjs": "^1.1.3",
     "fbemitter": "^2.1.1",
+    "konva": "^1.7.6",
     "react": "^16.2.0",
     "react-canvas": "^1.3.0",
     "react-cropper": "^1.0.1",
     "react-dom": "^16.2.0",
+    "react-konva": "^1.6.4",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
