--- a/package.json
+++ b/package.json
@@ -5,23 +5,36 @@
   "dependencies": {
     "axios": "^0.17.1",
     "cropperjs": "^1.1.3",
-    "fbemitter": "^2.1.1",
-    "konva": "^1.7.6",
+    "express": "^4.16.2",
     "react": "^16.2.0",
-    "react-canvas": "^1.3.0",
     "react-cropper": "^1.0.1",
     "react-dom": "^16.2.0",
-    "react-konva": "^1.6.4",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "stackblur-canvas": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
