--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "stackblur-canvas": "^1.4.0"
+    "stackblur-canvas": "^1.4.0",
+    "styled-components": "^2.2.4"
   },
   "scripts": {
     "start": "node server.js",
