--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
     "cropperjs": "^1.1.3",
     "express": "^4.16.2",
     "react": "^16.2.0",
@@ -14,11 +15,13 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "resize-base64": "^1.0.12",
     "stackblur-canvas": "^1.4.0",
     "styled-components": "^2.2.4"
   },
   "scripts": {
     "start": "node server.js",
+    "start:json": "json-server --watch db.json",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -33,6 +36,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
+    "json-server": "^0.12.1",
     "style-loader": "^0.19.0",
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^1.12.2",
