--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "concurrently": "^3.5.1",
     "cropperjs": "^1.1.3",
     "express": "^4.16.2",
     "react": "^16.2.0",
@@ -20,8 +21,9 @@
     "styled-components": "^2.2.4"
   },
   "scripts": {
+    "dev": "concurrently \"npm run start\" \"npm run jsonserver\"",
     "start": "node server.js",
-    "start:json": "json-server --watch db.json",
+    "jsonserver": "json-server --watch db.json",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
