--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "concurrently": "^3.5.1",
     "cropperjs": "^1.1.3",
     "express": "^4.16.2",
+    "gm": "^1.23.0",
+    "images": "^3.0.1",
+    "jimp": "^0.2.28",
     "react": "^16.2.0",
     "react-cropper": "^1.0.1",
     "react-dom": "^16.2.0",
@@ -17,6 +20,8 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "resize-base64": "^1.0.12",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.77.1",
     "stackblur-canvas": "^1.4.0",
     "styled-components": "^2.2.4"
   },
